--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "gulp": "gulp",
-    "build": "gulp css"
+    "css": "gulp css"
   },
   "keywords": [],
   "author": "",
