Improve integration of component generator
Now it goes as far as creating a css-module and making the required
links

--- a/packages/tools/generator-union/package.json
+++ b/packages/tools/generator-union/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "extend": "^3.0.0",
+    "npm-link-save": "GeorgeTaveras1231/npm-link-save#patch-1",
     "pascal-case": "^2.0.0",
     "yeoman-generator": "^1.0.1"
   },
