--- a/package.json
+++ b/package.json
@@ -3,18 +3,53 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "config": {
+    "process-config-file": "devprocesses.config.js",
+    "local-docs-app-url": "http://localhost:8080"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "bootstrap": "lerna bootstrap",
+    "build": "webpack && webpack --config ./packages/docs/webpack.config.js",
+    "css": "gulp css",
     "gulp": "gulp",
-    "css": "gulp css"
+    "logs": "pm2 logs",
+    "open": "open $npm_package_config_local_docs_app_url",
+    "prepublish": "echo 'You probably meant to run \"npm run publish-packages\"...' && exit 1",
+    "publish-packages": "lerna publish",
+    "restart": "pm2 restart all",
+    "start": "pm2 start $npm_package_config_process_config_file",
+    "status": "pm2 status",
+    "stop": "pm2 stop all",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "a-css-loader": "^1.0.0-beta.5",
+    "babel": "^6.5.2",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-object-rest-spread": "^6.20.2",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "bootstrap": "4.0.0-alpha.6",
+    "bootstrap-sass": "^3.3.7",
+    "css-byebye": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
-    "node-sass-import-once": "^1.2.0"
+    "html-webpack-plugin": "^2.26.0",
+    "image-webpack-loader": "^3.1.0",
+    "lerna": "2.0.0-beta.31",
+    "node-sass-import-once": "^1.2.0",
+    "pm2": "^2.2.3",
+    "postcss-loader": "^1.2.2",
+    "postcss-remove-rules": "^1.0.0",
+    "react-markdown-loader": "^1.1.6",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
