Change name of field-styles package to fields-css
To be compatible with the component genertor

--- a/packages/components/fields-css/package.json
+++ b/packages/components/fields-css/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@union/field-styles",
+  "name": "@union/fields-css",
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
