--- a/packages/components/fields/package.json
+++ b/packages/components/fields/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "devDependencies": { },
   "dependencies": {
-    "@union/field-styles": "^1.0.0",
+    "@union/fields-css": "^1.0.0",
     "humanize-string": "^1.0.1",
     "react": "^15.4.1"
   }
