Add clean script to clean all build files and node_modules

--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "bootstrap": "lerna bootstrap",
     "build": "webpack && webpack --config ./packages/docs/webpack.config.js",
     "css": "gulp css",
+    "clean": "yes | lerna clean && lerna exec -- rm -rf lib",
     "gulp": "gulp",
     "logs": "pm2 logs",
+    "new-component": "yo union:component",
+    "new-css-module": "yo union:css-module",
     "open": "open $npm_package_config_local_docs_app_url",
     "publish-packages": "lerna publish",
     "restart": "pm2 restart all",
     "start": "pm2 start $npm_package_config_process_config_file",
     "status": "pm2 status",
     "stop": "pm2 stop all",
-    "new-css-module": "yo union:css-module",
-    "new-component": "yo union:component",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
