Fix clean task and add lines flag to logs command

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "bootstrap": "lerna bootstrap",
     "build": "webpack && webpack --config ./packages/docs/webpack.config.js",
     "css": "gulp css",
-    "clean": "yes | lerna clean && lerna exec -- rm -rf lib",
+    "clean": "echo y | lerna clean && lerna exec -- rm -rf ./lib",
     "gulp": "gulp",
-    "logs": "pm2 logs",
+    "logs": "pm2 logs --lines=40",
     "new-component": "yo union:component",
     "new-css-module": "yo union:css-module",
     "open": "open $npm_package_config_local_docs_app_url",
