Introduce react-docgen
This will facilitate auto-generating documentation for react components
based on defined propTypes

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bootstrap": "4.0.0-alpha.6",
     "bootstrap-sass": "^3.3.7",
     "css-byebye": "^1.0.1",
+    "extend": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
     "html-webpack-plugin": "^2.26.0",
@@ -46,6 +47,8 @@
     "pm2": "^2.2.3",
     "postcss-loader": "^1.2.2",
     "postcss-remove-rules": "^1.0.0",
+    "react-docgen": "^2.13.0",
+    "react-docgen-loader": "^2.9.1",
     "react-markdown-loader": "^1.1.6",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
