--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -21,8 +21,11 @@
     "babel-preset-react": "^6.16.0",
     "directory-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "imports-loader": "^0.7.0",
     "json-loader": "^0.5.4",
     "markdown-react-loader": "^1.0.0",
+    "react-docgen": "^2.13.0",
+    "react-docgen-loader": "^2.9.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   },
@@ -33,6 +36,7 @@
     "@union/fields": "^1.0.0",
     "@union/typography": "^1.0.0",
     "humanize-string": "^1.0.1",
+    "jsx-to-string": "^1.0.0",
     "pascal-case": "^2.0.0",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
