--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -42,6 +42,7 @@
     "prismjs": "^1.6.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-remarkable": "^1.1.1",
     "react-router": "^3.0.1"
   }
 }
