--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "directory-loader": "^1.0.0",
+    "mdjsx-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "imports-loader": "^0.7.0",
     "json-loader": "^0.5.4",
