Remove dependency on private registry

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "echo y | lerna clean && lerna exec -- rm -rf ./lib",
     "gulp": "gulp",
     "logs": "pm2 logs --lines=40",
+    "bootstrap-generators": "npm link ./packages/tools/generator-union",
     "new-component": "yo union:component",
     "new-css-module": "yo union:css-module",
     "open": "open $npm_package_config_local_docs_app_url",
@@ -39,7 +40,6 @@
     "bootstrap": "4.0.0-alpha.6",
     "bootstrap-sass": "^3.3.7",
     "css-byebye": "^1.0.1",
-    "generator-union": "^1.0.0",
     "glob-all": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
