--- a/packages/tools/generator-union/package.json
+++ b/packages/tools/generator-union/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "camelize": "^1.0.0",
     "extend": "^3.0.0",
-    "npm-link-save": "GeorgeTaveras1231/npm-link-save#patch-1",
+    "npm-link-save": "^0.2.0",
     "pascal-case": "^2.0.0",
     "titleize": "^1.0.0",
     "yeoman-generator": "^1.0.1"
