--- a/packages/tools/mdjsx-loader/package.json
+++ b/packages/tools/mdjsx-loader/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "except": "^0.1.3",
     "front-matter": "^2.1.1",
     "react": "^15.4.2",
     "react-remarkable": "^1.1.1"
