--- a/packages/components/fields/package.json
+++ b/packages/components/fields/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {},
   "dependencies": {
     "@union/fields-css": "^1.0.0",
+    "@union/bootstrap": "^1.0.0",
     "humanize-string": "^1.0.1",
     "react": "^15.4.1"
   }
