Simplify consumption of css-modules by creating new file extension
All css modules have a cssm extension

--- a/packages/components/fields-css/package.json
+++ b/packages/components/fields-css/package.json
@@ -2,7 +2,7 @@
   "name": "@union/fields-css",
   "version": "1.0.0",
   "description": "",
-  "main": "lib/index.js",
+  "main": "lib/index.cssm",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
@@ -15,7 +15,6 @@
   "dependencies": {
     "@union/colors": "^1.0.0",
     "@union/icons": "^1.0.0",
-    "@union/typography": "^1.0.0",
-    "css-module-builder": "^1.0.0-beta.4"
+    "@union/typography": "^1.0.0"
   }
 }
