--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,7 @@
   "lerna": "2.0.0-beta.31",
   "packages": [
     "packages/docs",
+    "packages/all",
     "packages/components/*",
     "packages/core/*",
     "packages/tools/*"
