--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
   "packages": [
     "packages/docs",
     "packages/codepen-build",
+    "packages/tests",
     "packages/components/*",
     "packages/core/*",
     "packages/tools/*"
