Bring test build to root of project

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "pm2 start $npm_package_config_process_config_file",
     "status": "pm2 status",
     "stop": "pm2 stop all",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tdd": "karma start",
+    "test": "karma start --single-run"
   },
   "keywords": [],
   "author": "",
@@ -40,19 +41,29 @@
     "bootstrap": "4.0.0-alpha.6",
     "bootstrap-sass": "^3.3.7",
     "css-byebye": "^1.0.1",
+    "enzyme": "^2.7.1",
     "extend": "^3.0.0",
     "glob-all": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
     "html-webpack-plugin": "^2.26.0",
     "image-webpack-loader": "^3.1.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.4.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-webpack": "^2.0.2",
     "lerna": "2.0.0-beta.31",
     "node-sass-import-once": "^1.2.0",
     "pm2": "^2.2.3",
     "postcss-loader": "^1.2.2",
     "postcss-remove-rules": "^1.0.0",
+    "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
     "react-docgen": "^2.13.0",
     "react-docgen-loader": "^2.9.1",
+    "react-dom": "^15.4.2",
     "react-markdown-loader": "^1.1.6",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
