--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "build": "webpack && webpack --config ./packages/docs/webpack.config.js",
+    "build": "npm run build-packages && webpack --config ./packages/docs/webpack.config.js",
+    "build-packages": "webpack",
     "css": "gulp css",
     "clean": "echo y | lerna clean && lerna exec -- rm -rf ./lib",
     "gulp": "gulp",
