--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp-sass": "^2.3.2",
     "html-webpack-plugin": "^2.26.0",
     "image-webpack-loader": "^3.1.0",
+    "imports-loader": "^0.7.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.4.1",
     "karma-jasmine": "^1.1.0",
