--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -23,7 +23,6 @@
     "directory-loader": "^1.0.0",
     "mdjsx-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "imports-loader": "^0.7.0",
     "json-loader": "^0.5.4",
     "react-docgen": "^2.13.0",
     "react-docgen-loader": "^2.9.1",
@@ -35,11 +34,10 @@
     "@union/colors": "^1.0.0",
     "@union/fields": "^1.0.0",
     "@union/typography": "^1.0.0",
+    "@union/doc-utils": "^1.0.0",
     "humanize-string": "^1.0.1",
-    "jsx-to-string-2": "^1.0.0",
     "pascal-case": "^2.0.0",
     "prism-themes": "^1.0.0",
-    "prismjs": "^1.6.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-remarkable": "^1.1.1",
