--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "status": "pm2 status",
     "stop": "pm2 stop all",
     "test:watch": "karma start",
+    "test:chrome": "karma start --browsers=Chrome --single-run",
     "test": "karma start --single-run"
   },
   "keywords": [],
@@ -52,6 +53,7 @@
     "imports-loader": "^0.7.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
