--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@xogroup/union",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "config": {
     "process-config-file": "devprocesses.config.js",
     "local-docs-app-url": "http://localhost:8080"
