Temporarily remove codepen-build from packages
Additionally, move pattern-library packages to packages folder

--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "bootstrap-generators": "npm link ./packages/tools/generator-union",
-    "build": "npm run build-packages && webpack --config ./packages/docs/webpack.config.js",
-    "build:experiment": "webpack --config ./webpack.experiment.js",
-    "build:docs": "webpack --config ./pattern-library-docs/webpack.config.js",
-    "build:packages": "webpack",
+    "build": "npm run build:packages && npm run build:docs",
+    "build:docs": "webpack --config webpack.docs.js",
+    "build:packages": "webpack --config webpack.packages.js",
     "clean": "echo y | lerna clean && lerna exec -- rm -rf ./lib",
     "css": "gulp css",
     "gulp": "gulp",
