--- a/lerna.json
+++ b/lerna.json
@@ -2,8 +2,7 @@
   "lerna": "2.0.0-beta.31",
   "packages": [
     "packages/tools/*",
-    "pattern-library/pkgs/*",
-    "pattern-library/docs/"
+    "packages/pattern-library/*",
   ],
   "version": "independent"
 }
