--- a/package.json
+++ b/package.json
@@ -27,16 +27,26 @@
     "status": "pm2 status",
     "stop": "pm2 stop all",
     "test": "karma start --single-run",
+    "test:lint": "eslint $(git ls-files *.js *.jsx)",
     "test:chrome": "karma start --browsers=ChromeWithDevTools --single-run",
     "test:watch": "karma start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "jsx-to-string-2": "^1.0.0",
+    "prism-themes": "^1.0.0",
+    "prismjs": "^1.6.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
+  },
   "devDependencies": {
     "a-css-loader": "^1.0.0-beta.5",
     "babel": "^6.5.2",
     "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
@@ -46,6 +56,14 @@
     "bootstrap-sass": "^3.3.7",
     "css-byebye": "^1.0.1",
     "enzyme": "^2.7.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jasmine": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
+    "exports-loader": "^0.6.3",
     "extend": "^3.0.0",
     "glob-all": "^3.1.0",
     "gulp": "^3.9.1",
@@ -68,7 +86,6 @@
     "postcss-loader": "^1.2.2",
     "postcss-remove-rules": "^1.0.0",
     "prism-themes": "^1.0.0",
-    "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-docgen": "^2.13.0",
     "react-docgen-loader": "^2.9.1",
