Lint json files and fix lerna.json file

--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "lerna": "2.0.0-beta.31",
   "packages": [
     "packages/tools/*",
-    "packages/pattern-library/*",
+    "packages/pattern-library/*"
   ],
   "version": "independent"
 }
