--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "status": "pm2 status",
     "stop": "pm2 stop all",
     "test": "karma start --single-run",
-    "test:lint": "eslint $(git ls-files *.js *.jsx)",
+    "test:lint": "eslint $(git ls-files *.js *.jsx *.json)",
     "test:chrome": "karma start --browsers=ChromeWithDevTools --single-run",
     "test:watch": "karma start"
   },
@@ -34,6 +34,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint-plugin-json": "^1.2.0",
     "jsx-to-string-2": "^1.0.0",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
