Introduce global eslint build

--- a/package.json
+++ b/package.json
@@ -11,31 +11,36 @@
     "bootstrap": "lerna bootstrap",
     "bootstrap-generators": "npm link ./packages/tools/generator-union",
     "build": "npm run build:packages && npm run build:docs",
-    "build:docs": "webpack --config webpack.docs.js",
-    "build:packages": "webpack --config webpack.packages.js",
+    "build.docs": "webpack --config webpack.docs.js",
+    "build.packages": "webpack --config webpack.packages.js",
     "clean": "echo y | lerna clean && lerna exec -- rm -rf ./lib",
     "css": "gulp css",
     "gulp": "gulp",
     "logs": "pm2 logs --lines=40",
-    "new:component": "yo union:component",
-    "new:css-module": "yo union:css-module",
+    "new.component": "yo union:component",
+    "new.css-module": "yo union:css-module",
     "open": "open $npm_package_config_local_docs_app_url",
     "publish-packages": "lerna publish",
     "restart": "pm2 restart all",
     "start": "pm2 start $npm_package_config_process_config_file",
     "status": "pm2 status",
     "stop": "pm2 stop all",
-    "test": "karma start --single-run",
-    "test:lint": "eslint $(git ls-files *.js *.jsx *.json)",
-    "test:chrome": "karma start --browsers=ChromeWithDevTools --single-run",
-    "test:watch": "karma start"
+    "lint": "eslint --ext .js,.jsx,.json .",
+    "test": "npm run test.patterns && npm run test.tools",
+    "test.patterns": "karma start --single-run",
+    "test.tools": "lerna run test --ignore '@xo-union/*'",
+    "test.patterns.chrome": "karma start --browsers=ChromeWithDevTools --single-run",
+    "test.patterns.watch": "karma start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "css-module-builder": "^1.0.0-beta.5",
+    "humanize-string": "latest",
     "eslint-plugin-json": "^1.2.0",
     "jsx-to-string-2": "^1.0.0",
+    "pascal-case": "latest",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
     "react": "^15.4.2",
@@ -58,9 +63,11 @@
     "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.0.0",
+    "eslint-import-resolver-node": "^0.3.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jasmine": "^2.2.0",
+    "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "exports-loader": "^0.6.3",
@@ -79,7 +86,7 @@
     "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack": "^2.0.2",
-    "lerna": "2.0.0-beta.31",
+    "lerna": "2.0.0-beta.36",
     "node-sass-import-once": "^1.2.0",
     "pascal-case": "^2.0.0",
     "pm2": "^2.2.3",
