--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xogroup/union",
+  "name": "@xo-union/union",
   "version": "0.0.1",
   "description": "",
   "main": "webpack.config.js",
