--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "babel-preset-react": "^6.16.0",
     "bootstrap": "4.0.0-alpha.6",
     "bootstrap-sass": "^3.3.7",
+    "css": "^2.2.1",
     "css-byebye": "^1.0.1",
     "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
