Create entnrypoint utility

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "status": "pm2 status",
     "stop": "pm2 stop all",
     "lint": "eslint --ext .js,.jsx,.json .",
-    "test": "npm run test.patterns && npm run test.tools",
+    "test": "npm run test.patterns && npm run test.tools && npm run test.support",
+    "test.support": "jasmine",
     "test.patterns": "karma start --single-run",
     "test.tools": "lerna run test --ignore '@xo-union/*'",
     "test.patterns.chrome": "karma start --browsers=ChromeWithDevTools --single-run",
