Dynamically load entrypoints based on .entrypoints.json file

--- a/package.json
+++ b/package.json
@@ -13,26 +13,25 @@
     "build": "npm run build.packages && npm run build.docs",
     "build.docs": "webpack --config webpack.docs.js",
     "build.packages": "webpack --config webpack.packages.js",
-    "clean": "echo y | lerna clean && lerna exec -- rm -rf ./lib",
-    "css": "gulp css",
+    "clean": "echo y | lerna clean && git clean -xf packages/pattern-library",
     "gulp": "gulp",
+    "lint": "eslint --ext .js,.jsx,.json .",
     "logs": "pm2 logs --lines=40",
-    "new.pattern": "yo union:pattern",
     "new.component": "yo union:component",
     "new.css-module": "yo union:css-module",
+    "new.pattern": "yo union:pattern",
     "open": "open $npm_package_config_local_docs_app_url",
     "publish-packages": "lerna publish",
     "restart": "pm2 restart all",
     "start": "pm2 start $npm_package_config_process_config_file",
     "status": "pm2 status",
     "stop": "pm2 stop all",
-    "lint": "eslint --ext .js,.jsx,.json .",
-    "test": "npm run test.patterns && npm run test.tools && npm run test.support",
-    "test.support": "jasmine",
+    "test": "npm run test.patterns && npm run test.tools && npm run test.support && npm run lint",
     "test.patterns": "karma start --single-run",
-    "test.tools": "lerna run test --ignore '@xo-union/*'",
     "test.patterns.chrome": "karma start --browsers=ChromeWithDevTools --single-run",
-    "test.patterns.watch": "karma start"
+    "test.patterns.watch": "karma start",
+    "test.support": "jasmine",
+    "test.tools": "lerna run test --ignore '@xo-union/*'"
   },
   "keywords": [],
   "author": "",
