Say patterns instead of packages

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "bootstrap.generators": "npm link ./packages/tools/generator-union",
-    "build": "npm run build.packages && npm run build.docs",
+    "build": "npm run build.patterns && npm run build.docs",
     "build.docs": "webpack --config webpack.docs.js",
-    "build.packages": "webpack --config webpack.packages.js",
+    "build.patterns": "webpack --config webpack.patterns.js",
     "clean": "echo y | lerna clean && git clean -xf packages/pattern-library",
     "gulp": "gulp",
     "lint": "eslint --ext .js,.jsx,.json .",
@@ -21,7 +21,7 @@
     "new.css-module": "yo union:css-module",
     "new.pattern": "yo union:pattern",
     "open": "open $npm_package_config_local_docs_app_url",
-    "publish-packages": "lerna publish",
+    "publish.packages": "lerna publish",
     "restart": "pm2 restart all",
     "start": "pm2 start $npm_package_config_process_config_file",
     "status": "pm2 status",
