eslintignore docs build

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,4 @@
+pattern-library/docs/build/*
 packages/tools/generator-union/generators/**/templates/**/*.js
 node_modules
 packages/pattern-library/**/*.cssm
