--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,5 @@
 pattern-library/docs/build/*
-packages/tools/generator-union/generators/**/templates/**/*.js
+packages/tools/generator-union/generators/**/templates/**/*
 node_modules
 packages/pattern-library/**/*.cssm
 packages/pattern-library/**/*.js
