--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,11 @@
 machine:
   node:
     version: 7.5.0
+
+dependencies:
+  post:
+    - npm run bootstrap
+
+compile:
+  override:
+    - npm run build.patterns
