--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
   "license": "ISC",
   "dependencies": {
     "css-module-builder": "^1.0.0-beta.5",
-    "humanize-string": "latest",
     "eslint-plugin-json": "^1.2.0",
+    "humanize-string": "latest",
     "jsx-to-string-2": "^1.0.0",
     "pascal-case": "latest",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
     "react": "^15.4.2",
+    "react-docgen": "^2.9.1",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2"
   },
