--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "html-webpack-plugin": "^2.26.0",
     "image-webpack-loader": "^3.1.0",
     "imports-loader": "^0.7.0",
+    "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
     "jsx-to-string-2": "^1.0.0",
     "karma": "^1.4.1",
