Add script to publish docs to s3

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "new.pattern": "yo union:pattern",
     "open": "open $npm_package_config_local_docs_app_url",
     "publish.packages": "lerna publish",
+    "publish.docs": "sh ./scripts/publish-docs.sh",
     "restart": "pm2 restart all",
     "start": "pm2 start $npm_package_config_process_config_file",
     "status": "pm2 status",
