--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-router": "^3.0.2"
   },
   "devDependencies": {
-    "a-css-loader": "^1.0.0-beta.5",
+    "a-css-loader": "^1.0.0-beta.9",
     "babel": "^6.5.2",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
@@ -72,6 +72,7 @@
     "eslint-plugin-react": "^6.9.0",
     "exports-loader": "^0.6.3",
     "extend": "^3.0.0",
+    "file-loader": "^0.10.0",
     "glob-all": "^3.1.0",
     "html-webpack-plugin": "^2.26.0",
     "image-webpack-loader": "^3.1.0",
@@ -86,13 +87,14 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack": "^2.0.2",
     "lerna": "2.0.0-beta.36",
+    "node-sass": "^4.5.0",
     "pascal-case": "^2.0.0",
     "pm2": "^2.2.3",
     "postcss-loader": "^1.2.2",
     "postcss-remove-rules": "^1.0.0",
     "prism-themes": "^1.0.0",
     "react-addons-test-utils": "^15.4.2",
-    "react-docgen": "^2.13.0",
+    "react-docgen": "^2.9.1",
     "react-docgen-loader": "^2.9.1",
     "react-dom": "^15.4.2",
     "react-markdown-loader": "^1.1.6",
