Facilitate cleaning parts of the project in isolation

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "npm run build.patterns && npm run build.docs",
     "build.docs": "webpack --config webpack.docs.js",
     "build.patterns": "webpack --config webpack.patterns.js",
-    "clean": "echo y | lerna clean && git clean -xf packages/pattern-library",
+    "clean": "npm run clean.dependencies && npm run clean.build",
+    "clean.dependencies": "echo y | lerna clean",
+    "clean.build": "git clean -xf packages/pattern-library",
     "lint": "eslint --ext .js,.jsx,.json .",
     "logs": "pm2 logs --lines=40",
     "new.pattern": "yo union:pattern",
