--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "process-config-file": "devprocesses.config.js",
     "local-docs-app-url": "http://localhost:8080"
   },
+  "engineStrict": true,
+  "engines": {
+    "node" : ">=7.0.0 <8.0"
+  },
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "bootstrap.generators": "npm link ./packages/tools/generator-union",
