Apply active link styles to currently visited link
To accomplish this I introduced mobx to mantain the state of the current
path

--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "eslint-plugin-json": "^1.2.0",
     "humanize-string": "latest",
     "jsx-to-string-2": "^1.0.0",
-    "lerna": "^2.0.0-beta.38",
+    "mobx": "https://registry.npmjs.org/mobx/-/mobx-3.1.0.tgz",
+    "mobx-react": "https://registry.npmjs.org/mobx-react/-/mobx-react-4.1.0.tgz",
+    "mobx-react-router": "^3.1.2",
     "pascal-case": "latest",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
@@ -63,6 +65,8 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
@@ -98,7 +102,9 @@
     "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack": "^2.0.2",
-    "lerna": "2.0.0-beta.36",
+    "lerna": "2.0.0-beta.38",
+    "mobx": "^3.1.0",
+    "mobx-react": "^4.1.0",
     "node-sass": "^4.5.0",
     "pascal-case": "^2.0.0",
     "pm2": "^2.2.3",
