--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,8 @@
   ],
   "plugins": [
     "transform-object-rest-spread",
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-decorators-legacy",
+    "transform-function-bind"
   ]
 }
