Add scripts to publish

--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "clean.build": "git clean -xf packages/pattern-library",
     "lint": "eslint --ext .js,.jsx,.json .",
     "logs": "pm2 logs --lines=40",
+    "login": "sh ./scripts/login.sh",
     "new.pattern": "yo union:pattern",
     "open": "open $npm_package_config_local_docs_app_url",
-    "publish.packages": "lerna publish",
+    "publish.patterns": "sh ./scripts/publish-patterns.sh",
     "publish.docs": "sh ./scripts/publish-docs.sh",
     "publish.assets": "sh ./scripts/publish-assets.sh",
     "restart": "pm2 restart all",
