--- a/packages/pattern-library/.gitignore
+++ b/packages/pattern-library/.gitignore
@@ -1,2 +1,5 @@
-*.js
-*.cssm
+# Distribution files used to be ignored. However, it is necessary to track package
+# files that change to allow lerna to determine that a package should be published
+#
+# *.js
+# *.cssm
