--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "login": "sh ./scripts/login.sh",
     "new.pattern": "yo union:pattern",
     "open": "open $npm_package_config_local_docs_app_url",
-    "publish.patterns": "sh ./scripts/publish-patterns.sh",
+    "publish.packages": "sh ./scripts/publish-packages.sh",
     "publish.docs": "sh ./scripts/publish-docs.sh",
     "publish.assets": "sh ./scripts/publish-assets.sh",
     "restart": "pm2 restart all",
@@ -67,6 +67,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "bootstrap": "4.0.0-alpha.6",
+    "chalk": "https://registry.npmjs.org/chalk/-/chalk-1.1.3.tgz",
     "css": "^2.2.1",
     "css-byebye": "^1.0.1",
     "enzyme": "^2.7.1",
@@ -87,6 +88,7 @@
     "html-webpack-plugin": "^2.26.0",
     "image-webpack-loader": "^3.1.0",
     "imports-loader": "^0.7.0",
+    "inquirer": "^3.0.6",
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
     "jsx-to-string-2": "^1.0.0",
@@ -111,6 +113,7 @@
     "react-router": "^3.0.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
+    "treeify": "^1.0.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
