--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
     "react": "^15.4.2",
+    "react-css-modules": "^4.1.0",
     "react-docgen": "^2.9.1",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
