--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "css-module-builder": "^1.0.0-beta.5",
-    "humanize-string": "latest",
+    "humanize-string": "https://registry.npmjs.org/humanize-string/-/humanize-string-1.0.1.tgz",
     "jsx-to-string-2": "^1.0.0",
     "mobx": "^3.1.5",
     "mobx-react": "^4.1.3",
     "mobx-react-router": "^3.1.2",
-    "pascal-case": "latest",
+    "pascal-case": "https://registry.npmjs.org/pascal-case/-/pascal-case-2.0.0.tgz",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
     "react": "^15.4.2",
@@ -70,6 +70,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "bootstrap": "4.0.0-alpha.6",
