Fix version requirement for essentials package

--- a/packages/pattern-library/essentials/package.json
+++ b/packages/pattern-library/essentials/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@xo-union/bootstrap": "0.1.0",
-    "@xo-union/typography": "0.1.0"
+    "@xo-union/bootstrap": "^0.1.0",
+    "@xo-union/typography": "^0.1.0"
   },
   "keywords": [],
   "author": "",
