--- a/packages/pattern-library/colors/package.json
+++ b/packages/pattern-library/colors/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@xo-union/colors",
   "version": "0.2.0",
-  "main": "index.cssm",
+  "main": "variables.cssm",
   "dependencies": {
     "css-module-builder": "^1.0.0-beta.5"
   }
