--- a/packages/pattern-library/buttons/package.json
+++ b/packages/pattern-library/buttons/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "css-module-builder": "^1.0.0-beta.5",
     "react": "^15.4.2",
-    "@xo-union/colors": "^0.2.0"
+    "@xo-union/colors": "^0.2.0",
+    "@xo-union/typography": "^0.1.0"
   }
 }
