--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack": "^2.0.2",
     "lerna": "2.0.0-beta.38",
+    "loader-utils": "^1.1.0",
     "node-sass": "^4.5.0",
     "pascal-case": "^2.0.0",
     "pm2": "^2.2.3",
@@ -125,6 +126,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
+    "xml-loader": "^1.2.1",
+    "xml2js": "^0.4.17",
     "yo": "^1.8.5"
   }
 }
