--- a/packages/pattern-library/icons/package.json
+++ b/packages/pattern-library/icons/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@xo-union/icons",
   "version": "0.1.0",
-  "main": "index.cssm",
+  "main": "components/index.js",
   "dependencies": {
     "css-module-builder": "^1.0.0-beta.5"
   }
