--- a/packages/pattern-library/fields/package.json
+++ b/packages/pattern-library/fields/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@xo-union/fields",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "main": "components/index.js",
   "dependencies": {
     "css-module-builder": "^1.0.0-beta.5",
     "react": "^15.4.2",
     "@xo-union/bootstrap": "^0.2.0",
     "@xo-union/colors": "^0.3.0",
-    "@xo-union/icons": "^0.3.0"
+    "@xo-union/icons": "^0.3.0",
+    "@xo-union/utilities": "^0.1.0"
   }
 }
