Mobile header nav (#119)
* WIP

* Make mobile menus open status  mutially exclusive

* Allow closing of mobile menus

* Extract mobile components and make mobile buttons html buttons

* Move all state awareness related to mobile menus to MobileHeaderNav

* Support multiple menus in mobile

Additionally, refactor css

* Make variable name more universal

* Fix rendering in mobile screens

* Re-use tools dropdown in mobile

* First iteration of primary menu and sub menu

* WIP use same source to build desktop and mobile menus

* Refactor MenuFactories

* Refactor factory prop name

Use Template, as to not confuse this pattern with the builder oop pattern

* Refactor MenuFactories.topLevelFactories

This name better communicates what's coming back

* Refactor CSS

* Refactor CSS

* Add miscellaneous menu items on closed mobile primary menu

* Delete unused file

* Refactor CSS

Avoid using media queries where necessary

* Remove empty rule block

* Refactor CSS

Move menu-item css into separate file

* Refactor SubMenu components

Make component name align with css class names

* Update dependencies + Fix failing tests + add debug utilities

* Fix union description in README

* Fix dependencies

Organizes devDependencies and move core-decorators into header-nav
package

* Fix dependency on prop-types package

Additionally, change install scripts to use yarn.

* Use yarn in circle

* Test mobile/HeadeNav

* Test isOpen prop

* Test PrimaryMenu

* Test MobileMenuButton

* Test closing of primary menu

* Fix lint build

* Fix paths

* Fix file rename issue

--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,6 @@
     "packages/tools/*",
     "packages/pattern-library/*"
   ],
-  "version": "independent"
+  "version": "independent",
+  "npmClient": "yarn"
 }
