--- a/circle.yml
+++ b/circle.yml
@@ -1,11 +1,21 @@
 machine:
   node:
     version: 7.5.0
+  environment:
+    PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin"
 
 dependencies:
+  cache_directories:
+    - ~/.cache/yarn
+  override:
+    - yarn
   post:
-    - npm run bootstrap
+    - yarn run bootstrap
+
+test:
+  override:
+    - yarn test
 
 compile:
   override:
-    - npm run build.patterns
+    - yarn run build.patterns
