--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "publish.docs": "sh ./scripts/publish-docs.sh",
     "publish.packages": "sh ./scripts/publish-packages.sh",
     "restart": "pm2 restart all",
-    "setup": "npm install && npm run bootstrap && npm run build.patterns",
+    "setup": "yarn install && npm run bootstrap && npm run build.patterns",
     "start": "pm2 start $npm_package_config_process_config_file",
     "status": "pm2 status",
     "stop": "pm2 stop all",
-    "test": "npm run test.patterns && npm run test.tools && npm run test.support && npm run lint",
+    "test": "yarn run test.patterns && yarn run test.tools && yarn run test.support && yarn run lint",
     "test.patterns": "karma start --single-run",
     "test.patterns.chrome": "karma start --browsers=ChromeWithDevTools --single-run",
     "test.patterns.watch": "karma start",
@@ -44,42 +44,43 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
+    "core-decorators": "^0.17.0",
     "css-module-builder": "^1.0.0-beta.5",
     "humanize-string": "https://registry.npmjs.org/humanize-string/-/humanize-string-1.0.1.tgz",
     "jsx-to-string-2": "^1.0.0",
-    "mobx": "^3.1.5",
-    "mobx-react": "^4.1.3",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "mobx-react-router": "^3.1.2",
-    "pascal-case": "https://registry.npmjs.org/pascal-case/-/pascal-case-2.0.0.tgz",
+    "pascal-case": "^2.0.0",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
-    "react": "^15.4.2",
-    "react-css-modules": "^4.1.0",
-    "react-docgen": "^2.9.1",
-    "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-addons-test-utils": "^15.5.1",
+    "react-css-modules": "^4.2.1",
+    "react-dom": "^15.5.4",
+    "react-router": "^3.0.5",
     "split-array": "^1.0.1"
   },
   "devDependencies": {
     "a-css-loader": "^1.0.0-beta.11",
-    "babel": "^6.5.2",
-    "babel-core": "^6.21.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel": "^6.23.0",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-function-bind": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "4.0.0-alpha.6",
     "chalk": "https://registry.npmjs.org/chalk/-/chalk-1.1.3.tgz",
     "css": "^2.2.1",
-    "css-byebye": "^1.0.1",
-    "enzyme": "^2.7.1",
-    "eslint": "^3.15.0",
+    "css-byebye": "^1.1.0",
+    "enzyme": "^2.8.2",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-import-resolver-node": "^0.3.0",
     "eslint-import-resolver-webpack": "^0.8.1",
@@ -87,45 +88,43 @@
     "eslint-plugin-jasmine": "^2.2.0",
     "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-react": "^6.10.3",
     "exports-loader": "https://registry.npmjs.org/exports-loader/-/exports-loader-0.6.3.tgz",
     "extend": "^3.0.0",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "file-loader": "^0.10.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "glob-all": "^3.1.0",
     "html-webpack-plugin": "^2.26.0",
-    "image-webpack-loader": "^3.1.0",
-    "imports-loader": "^0.7.0",
+    "image-webpack-loader": "^3.3.0",
+    "imports-loader": "^0.7.1",
     "inquirer": "^3.0.6",
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
     "jsx-to-string-2": "^1.0.0",
-    "karma": "^1.4.1",
+    "karma": "^1.6.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.2",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-webpack": "^2.0.2",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-webpack": "^2.0.3",
     "lerna": "2.0.0-beta.38",
     "loader-utils": "^1.1.0",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.5.2",
     "pascal-case": "^2.0.0",
-    "pm2": "^2.2.3",
-    "postcss-loader": "^1.2.2",
+    "pm2": "^2.4.5",
+    "postcss-loader": "^1.3.3",
     "postcss-remove-rules": "^1.0.0",
     "prism-themes": "^1.0.0",
-    "react-addons-test-utils": "^15.4.2",
-    "react-docgen": "^2.9.1",
+    "react-docgen": "^2.14.1",
     "react-docgen-loader": "^2.9.1",
-    "react-dom": "^15.4.2",
     "react-markdown-loader": "^1.1.6",
-    "react-router": "^3.0.2",
     "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
+    "semver": "https://registry.npmjs.org/semver/-/semver-5.3.0.tgz",
+    "style-loader": "^0.13.2",
     "treeify": "^1.0.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.4",
     "xml-loader": "^1.2.1",
     "xml2js": "^0.4.17",
     "yo": "^1.8.5"
