--- a/packages/pattern-library/header-nav/package.json
+++ b/packages/pattern-library/header-nav/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.6",
   "main": "index.js",
   "dependencies": {
+    "core-decorators": "^0.17.0",
     "css-module-builder": "^1.0.0-beta.5",
     "react": "^15.4.2",
+    "prop-types": "^15.5.8",
     "@xo-union/colors": "^0.3.0",
     "@xo-union/typography": "^0.1.2",
     "@xo-union/bootstrap": "^0.2.0",
