--- a/package.json
+++ b/package.json
@@ -116,7 +116,9 @@
     "react-markdown-loader": "^1.1.6",
     "sass-loader": "^4.1.1",
     "semver": "https://registry.npmjs.org/semver/-/semver-5.3.0.tgz",
+    "string-loader": "^0.0.1",
     "style-loader": "^0.13.2",
+    "svgo-loader": "^1.2.1",
     "treeify": "^1.0.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
