--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@segment/is-meta": "^1.0.0",
     "babel-polyfill": "^6.23.0",
     "core-decorators": "^0.17.0",
     "css-module-builder": "^1.0.0-beta.5",
     "humanize-string": "https://registry.npmjs.org/humanize-string/-/humanize-string-1.0.1.tgz",
     "jsx-to-string-2": "^1.0.0",
+    "matches-selector": "^1.0.0",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "mobx-react-router": "^3.1.2",
