Use lerna's publish by default and provide cherrypick publish script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build.xojs": "babel packages/xojs/src --out-dir packages/xojs/lib",
     "clean": "npm run clean.dependencies && npm run clean.build",
     "clean.all": "rm -rf node_modules && npm run clean",
-    "clean.build": "git clean -xf packages/pattern-library",
+    "clean.build": "git clean -df packages/pattern-library",
     "clean.dependencies": "echo y | lerna clean",
     "lint": "eslint --ext .js,.jsx,.json .",
     "login": "sh ./scripts/login.sh",
@@ -27,6 +27,7 @@
     "publish.assets": "sh ./scripts/publish-assets.sh",
     "publish.docs": "sh ./scripts/publish-docs.sh",
     "publish.packages": "sh ./scripts/publish-packages.sh",
+    "publish.packages.cherrypick": "sh ./scripts/publish-packages-cherrypick.sh",
     "restart": "pm2 restart all",
     "setup": "yarn install && npm run bootstrap && npm run build.patterns",
     "start": "pm2 start devprocesses.config.js",
