--- a/packages/xojs/package.json
+++ b/packages/xojs/package.json
@@ -1,8 +1,8 @@
 {
   "name": "xojs",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
-  "main": "index.js",
+  "main": null,
   "scripts": {},
   "keywords": [],
   "author": "",
