Fix package generation for xojs (#127)
* Fix package generation for xojs

* Reduce package sizes by only including compiled files

* Add tests for distribution contracts

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build.xojs": "babel packages/xojs/src --out-dir packages/xojs/lib",
     "clean": "npm run clean.dependencies && npm run clean.build",
     "clean.all": "rm -rf node_modules && npm run clean",
-    "clean.build": "git clean -df packages/pattern-library",
+    "clean.build": "git clean -df packages/",
     "clean.dependencies": "echo y | lerna clean",
     "lint": "eslint --ext .js,.jsx,.json .",
     "login": "sh ./scripts/login.sh",
@@ -45,6 +45,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "babel-register": "^6.24.1",
     "css-module-builder": "^1.0.0-beta.5",
     "humanize-string": "https://registry.npmjs.org/humanize-string/-/humanize-string-1.0.1.tgz",
     "jsx-to-string-2": "^1.0.0",
@@ -123,6 +124,7 @@
     "string-loader": "^0.0.1",
     "style-loader": "^0.13.2",
     "svgo-loader": "^1.2.1",
+    "tar-stream": "^1.5.2",
     "treeify": "^1.0.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
