--- a/packages/pattern-library/analytics/package.json
+++ b/packages/pattern-library/analytics/package.json
@@ -8,5 +8,8 @@
     "@segment/is-meta": "^1.0.0",
     "matches-selector": "^1.0.0",
     "prop-types": "^15.5.8"
-  }
+  },
+  "files": [
+    "lib/*"
+  ]
 }
