--- a/packages/pattern-library/buttons/package.json
+++ b/packages/pattern-library/buttons/package.json
@@ -7,5 +7,8 @@
     "react": "^15.4.2",
     "@xo-union/colors": "^0.3.1",
     "@xo-union/typography": "^0.1.4"
-  }
+  },
+  "files": [
+    "lib/*"
+  ]
 }
