--- a/packages/pattern-library/fields/package.json
+++ b/packages/pattern-library/fields/package.json
@@ -9,5 +9,8 @@
     "@xo-union/colors": "^0.3.1",
     "@xo-union/icons": "^0.3.3",
     "@xo-union/utilities": "^0.1.3"
-  }
+  },
+  "files": [
+    "lib/*"
+  ]
 }
