--- a/packages/pattern-library/header-nav/package.json
+++ b/packages/pattern-library/header-nav/package.json
@@ -15,5 +15,8 @@
     "@xo-union/utilities": "^0.1.3",
     "@xo-union/analytics": "^0.1.2",
     "xojs": "^0.0.3"
-  }
+  },
+  "files": [
+    "lib/*"
+  ]
 }
