--- a/packages/pattern-library/icons/package.json
+++ b/packages/pattern-library/icons/package.json
@@ -5,5 +5,8 @@
   "dependencies": {
     "css-module-builder": "^1.0.0-beta.5",
     "react": "^15.5.4"
-  }
+  },
+  "files": [
+    "lib/*"
+  ]
 }
