--- a/packages/pattern-library/typography/package.json
+++ b/packages/pattern-library/typography/package.json
@@ -4,5 +4,8 @@
   "main": "lib/index.cssm",
   "dependencies": {
     "css-module-builder": "^1.0.0-beta.5"
-  }
+  },
+  "files": [
+    "lib/*"
+  ]
 }
