--- a/packages/tools/generator-union/generators/pattern/templates/package.json
+++ b/packages/tools/generator-union/generators/pattern/templates/package.json
@@ -6,5 +6,8 @@
     "css-module-builder": "^1.0.0-beta.5",
     "react": "^15.5.0",
     "prop-types": "^15.5.8"
-  }
+  },
+  "files": [
+    "lib/*"
+  ]
 }
