--- a/packages/pattern-library/utilities/package.json
+++ b/packages/pattern-library/utilities/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "dependencies": {
     "css-module-builder": "^1.0.0-beta.5",
+    "@xo-union/typography": "^0.1.5",
     "@xo-union/colors": "^0.1.0"
   },
   "files": [
