--- a/package.json
+++ b/package.json
@@ -8,25 +8,26 @@
     "node": ">=7.0.0 <8.0"
   },
   "scripts": {
+    "benchmark": "yarn run karma -- start karma.conf.benchmark.js",
     "bootstrap": "lerna bootstrap && npm link ./packages/xojs",
     "bootstrap.generators": "npm link ./packages/tools/generator-union",
     "build": "yarn run build.patterns && yarn run build.docs && yarn run build.xojs",
     "build.docs": "webpack --config webpack.docs.babel.js",
     "build.patterns": "webpack --config webpack.patterns.babel.js",
-    "build.xojs": "babel packages/xojs/src --out-dir packages/xojs/lib --ignore *spec.js",
+    "build.xojs": "babel packages/xojs/src --out-dir packages/xojs/lib --ignore *spec.js,*benchmark.js",
     "clean": "yarn run clean.dependencies && yarn run clean.build",
     "clean.all": "rm -rf node_modules && yarn run clean",
     "clean.build": "git clean -dfx packages/@xo-union packages/xojs",
     "clean.dependencies": "echo y | lerna clean",
+    "eslint": "eslint",
     "karma": "yarn run node -- $(which karma)",
-    "lint": "yarn run lint.code && yarn run lint.spec",
-    "lint.code": "eslint --ext .js,.jsx,.json --ignore-pattern *spec.js* .",
-    "lint.spec": "eslint --ext .js,.jsx --config .eslintrc.jasmine.js **/*spec.js*",
+    "lint": "yarn run node -- ./scripts/lint/index.js",
     "login": "sh ./scripts/login.sh",
     "logs": "pm2 logs --lines=40",
     "new.pattern": "yo union:pattern",
     "node": "node -r babel-register",
     "open": "open http://localhost:8080",
+    "pm2": "pm2",
     "prebuild.patterns": "yarn run build.xojs",
     "publish.assets": "sh ./scripts/publish-assets.sh",
     "publish.docs": "sh ./scripts/publish-docs.sh",
@@ -35,6 +36,7 @@
     "restart": "pm2 restart all",
     "setup": "yarn install && yarn run bootstrap && yarn run build.patterns",
     "start": "pm2 start devprocesses.config.js",
+    "start.docserver": "webpack-dev-server --inline --hot --config webpack.docs.babel.js --compress",
     "status": "pm2 status",
     "stop": "pm2 stop all",
     "test": "yarn run test.browser && yarn run test.node && yarn run lint",
@@ -52,6 +54,7 @@
     "css-module-builder": "^1.0.0-beta.5",
     "humanize-string": "https://registry.npmjs.org/humanize-string/-/humanize-string-1.0.1.tgz",
     "jsx-to-string-2": "^1.0.0",
+    "karma-benchmark-reporter": "^0.1.1",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "mobx-react-router": "^3.1.2",
@@ -108,6 +111,7 @@
     "jasmine-spec-reporter": "^4.1.0",
     "jsx-to-string-2": "^1.0.0",
     "karma": "^1.6.0",
+    "karma-benchmark": "^0.7.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.3",
@@ -115,6 +119,8 @@
     "karma-webpack": "^2.0.3",
     "lerna": "2.0.0-beta.38",
     "loader-utils": "^1.1.0",
+    "microtime": "^2.1.3",
+    "node-promisify": "^1.2.0",
     "node-sass": "^4.5.2",
     "pascal-case": "^2.0.0",
     "pm2": "^2.4.5",
