--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xogroup/union"
+  },
   "engineStrict": true,
   "engines": {
     "node": ">=7.0.0 <8.0"
@@ -85,6 +89,7 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "4.0.0-alpha.6",
     "chalk": "https://registry.npmjs.org/chalk/-/chalk-1.1.3.tgz",
+    "classnames": "^2.2.5",
     "css": "^2.2.1",
     "css-byebye": "^1.1.0",
     "enzyme": "^2.8.2",
