Avoid pushing unnecessary files to s3

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean": "yarn run clean.dependencies && yarn run clean.build",
     "clean.all": "rm -rf node_modules && yarn run clean",
     "clean.build": "git clean -dfx packages/@xo-union packages/xojs",
+    "clean.public": "git clean -dfx public/",
     "clean.dependencies": "echo y | lerna clean",
     "eslint": "eslint",
     "karma": "yarn run node -- $(which karma)",
