Allow icons to work in non-browser context (#134)
* Allow icons to work in non-browser context

* Fix lint build

* [skip ci] Remove padding

--- a/packages/@xo-union/icons/package.json
+++ b/packages/@xo-union/icons/package.json
@@ -4,7 +4,8 @@
   "main": "lib/components/index.js",
   "dependencies": {
     "css-module-builder": "^1.0.0-beta.5",
-    "react": "^15.5.4"
+    "react": "^15.5.4",
+    "xojs": "^0.1.0"
   },
   "files": [
     "lib/*"
