--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "postcss-loader": "^1.3.3",
     "postcss-remove-rules": "^1.0.0",
     "prism-themes": "^1.0.0",
+    "raw-loader": "^0.5.1",
     "react-docgen": "^2.14.1",
     "react-docgen-loader": "^2.9.1",
     "react-markdown-loader": "^1.1.6",
