--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "humanize-string": "https://registry.npmjs.org/humanize-string/-/humanize-string-1.0.1.tgz",
     "jsx-to-string-2": "^1.0.0",
     "karma-benchmark-reporter": "^0.1.1",
+    "marksy": "^0.3.0",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "mobx-react-router": "^3.1.2",
