--- a/packages/tools/mdjsx-loader/package.json
+++ b/packages/tools/mdjsx-loader/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "except": "^0.1.3",
     "front-matter": "^2.1.1",
+    "loader-utils": "^1.1.0",
+    "marksy": "^0.3.0",
     "react": "^15.4.2",
     "react-remarkable": "^1.1.1"
   },
